# crypto-wallet-finder

./: .gitignore  README.md  cryptosniffer.in  local.sh  local_windows.sh  meson.build
cryptosniffer/: application.py  const.py  functions.py  ui_setting_functions.py  window.py
data/: cryptosniffer.gresource.xml  meson.build
data/css/: main.css
data/icons/: meson.build
data/ui/: main.ui
